# industrial-digital-polygon

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: docs.yml
app/application/api/: main.py
app/application/api/dependencies/: __init__.py  auth.py  logger.py  user.py
app/application/api/dto/: __init__.py  auth_dto.py  base.py  mappers.py  user_dto.py
app/application/api/middleware/: __init__.py  auth_middleware.py  logging_middleware.py
app/application/api/routes/: auth.py  users.py
app/application/dto/: __init__.py  auth_commands.py  user_commands.py
app/application/services/: __init__.py  auth_service.py  user_service.py
app/domain/enums/: __init__.py  player_role.py
app/domain/exceptions/: base.py  user.py
app/domain/values/: Username.py  __init__.py  amount.py  base.py  cost.py  hashed_password.py  period.py  quantity.py
app/infra/config/: __init__.py  log_settings.py  settings.py
app/infra/database/: __init__.py  database.py  models.py  utils.py
app/infra/rabbitmq/: __init__.py  connection.py  consumers.py  repository.py
app/infra/redis/: __init__.py  redis.py  repository.py
app/infra/security/: __init__.py  authentication_service.py  jwt_handler.py
app/tests/: conftest.py
docker/: app.yaml  frontend.yaml  proxy.yaml  storages.yaml
docker/nginx/: nginx.conf
docs/: API.md  ARCHITECTURE.md  index.md
frontend/: Dockerfile  package-lock.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.css  App.jsx  types.d.ts
frontend/src/hooks/: useAuth.js
frontend/src/services/: api.jsx
user_guide/: index.md
(+31 files in other folders)
